trying to fix gp

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       margin: 0;
     }
   </style>
-  <script src="/libs/p5_js/p5.js"></script>
+  <script src="./libs/p5_js/p5.min.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="canvasIMG.js"></script>
-  <script src="sketch.js"></script>
-  <script src="input.js"></script>
-  <script src="ui.js"></script>
+  <script src="./canvasIMG.js"></script>
+  <script src="./sketch.js"></script>
+  <script src="./input.js"></script>
+  <script src="./ui.js"></script>
 </head>
 
 <body>
