--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>p5.js example</title>
+
   <style>
     body {
       background-color: rgb(0, 52, 97);
       padding: 0;
       margin: 0;
+
+      overflow: hidden;
+    }
+
+    .p5Canvas {
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 0px;
+      margin: 0px;
     }
   </style>
+
+
+  <!-- Bootstrap CSS v5.2.0-beta1 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <script src="./libs/p5_js/p5.min.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="./canvasIMG.js"></script>
@@ -21,7 +37,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="row justify-content-center align-items-center bg-dark" style="height: 100vh;">
   </main>
 </body>
 
